// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications create: check your answers Case created should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-panel govuk-panel--confirmation\\">
                <h1 class=\\"govuk-panel__title\\"> New case has been created</h1>
                <div class=\\"govuk-panel__body\\">The case reference number
                    <br><strong>CASE/04</strong>
                </div>
            </div>
        </div>
    </div>
    <div>
        <br><a class=\\"govuk-link\\" href=\\"/applications-service/case-team\\">Go back to main Applications homepage</a>
    </div>
</main>"
`;

exports[`applications create: check your answers Check your answers GET /check-your-answers should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"><div class=\\"govuk-grid-row\\"><div class=\\"govuk-grid-column-full\\"> Check your answers before creating a new project</div></div></h1>
    <form method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-full\\">
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Project information</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Title CASE/01</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"name\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project description</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam quis
                                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                            <td                             class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"description\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/\\">Change</a>
                                </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Sector</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Transport EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"sector\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/sector\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Subsector</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Highways EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"subSector\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/sub-sector\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project location</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">London</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"projectLocation\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Grid reference Easting</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">123456</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"gridReferenceEasting\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Grid reference Northing</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">987654</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"gridReferenceNorthing\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Region(s)</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">London EN,Yorkshire EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"regions\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/regions\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Map zoom level</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">City EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/zoom-level\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project email</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">some@ema.il</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/team-email\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Applicant information</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Organisation name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Org name</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-organisation-name\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Contact name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">John Smith</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-full-name\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Address</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Applicant address, London, ABC123</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-address\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Website</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">website.web</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-website\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Email address</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">email@email.co</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-email\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Telephone number</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">001</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-telephone-number\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Key dates</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Anticipated submission date published</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\"></td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/key-dates\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Anticipated submission date internal</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\"></td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/key-dates\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
            </div>
        </div>
        <br>
        <div class=\\"govuk-warning-text\\"><span class=\\"govuk-warning-text__icon\\" aria-hidden=\\"true\\">!</span>
            <strong             class=\\"govuk-warning-text__text\\"><span class=\\"govuk-warning-text__assistive\\">Warning</span> Creating the
                project will not publish the page onto the NSIP website</strong>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">I accept - confirm creation of a new case</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`applications create: check your answers Check your answers POST /check-your-answers should display errors if fields are missing 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#projectLocation\\">Enter the project location</a>
                            </li>
                            <li><a href=\\"#subSector\\">Choose the subsector of the project</a>
                            </li>
                            <li><a href=\\"#sector\\">Choose the sector of the project</a>
                            </li>
                            <li><a href=\\"#regions\\">Choose at least one region</a>
                            </li>
                            <li><a href=\\"#gridReferenceEasting\\">Enter the Grid reference Easting</a>
                            </li>
                            <li><a href=\\"#gridReferenceNorthing\\">Enter the Grid reference Northing</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"><div class=\\"govuk-grid-row\\"><div class=\\"govuk-grid-column-full\\"> Check your answers before creating a new project</div></div></h1>
    <form method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-full\\">
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Project information</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Title CASE/01</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"name\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project description</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam quis
                                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                            <td                             class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"description\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/\\">Change</a>
                                </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Sector</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Transport EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"sector\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/sector\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Subsector</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Highways EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"subSector\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/sub-sector\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project location</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">London</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"projectLocation\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Grid reference Easting</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">123456</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"gridReferenceEasting\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Grid reference Northing</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">987654</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"gridReferenceNorthing\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/geographical-information\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Region(s)</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">London EN,Yorkshire EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a id=\\"regions\\" class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/regions\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Map zoom level</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">City EN</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/zoom-level\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Project email</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">some@ema.il</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/team-email\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Applicant information</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Organisation name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Org name</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-organisation-name\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Contact name</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">John Smith</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-full-name\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Address</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">Applicant address, London, ABC123</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-address\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Website</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">website.web</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-website\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Email address</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">email@email.co</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-email\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Telephone number</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\">001</td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/applicant-telephone-number\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
                <table class=\\"govuk-table\\">
                    <thead class=\\"govuk-table__head\\">
                        <tr class=\\"govuk-table__row\\">
                            <th scope=\\"col\\" class=\\"govuk-table__header govuk-table__caption--m pins-table__cell--l govuk-!-static-padding-bottom-6\\"
                            colspan=\\"3\\">Key dates</th>
                        </tr>
                    </thead>
                    <tbody class=\\"govuk-table__body\\">
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Anticipated submission date published</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\"></td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/key-dates\\">Change</a>
                            </td>
                        </tr>
                        <tr class=\\"govuk-table__row\\">
                            <td class=\\"govuk-table__cell font-weight--700 pins-table__cell--s\\">Anticipated submission date internal</td>
                            <td class=\\"govuk-table__cell pins-table__cell--s\\"></td>
                            <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/create-new-case/1/key-dates\\">Change</a>
                            </td>
                        </tr>
                    </tbody>
                </table>
            </div>
        </div>
        <br>
        <div class=\\"govuk-warning-text\\"><span class=\\"govuk-warning-text__icon\\" aria-hidden=\\"true\\">!</span>
            <strong             class=\\"govuk-warning-text__text\\"><span class=\\"govuk-warning-text__assistive\\">Warning</span> Creating the
                project will not publish the page onto the NSIP website</strong>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">I accept - confirm creation of a new case</button>
            </div>
        </div>
    </form>
</main>"
`;
